# repomap

./: .gitignore  Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
Formula/: repomap.rb
docs/: ARCHITECTURE.md  CONTRIBUTING.md  TOOLS.md
rust/src/: config.rs  discovery.rs  graph.rs  hooks.rs  main.rs  mcp.rs  parser.rs  stats.rs  storage.rs  summarizer.rs  tools.rs
rust/src/parser/: extractor.rs  impl_refs.rs  imports.rs  languages.rs  proto_refs.rs  symbols.rs
tests/fixtures/csharp/: sample.cs
tests/fixtures/dart/: sample.dart
tests/fixtures/java/: Sample.java
tests/fixtures/javascript/: sample.js
tests/fixtures/lua/: sample.lua
tests/fixtures/php/: sample.php
tests/fixtures/proto/: sample.proto
tests/fixtures/python/: sample.py
tests/fixtures/rust/: sample.rs
tests/fixtures/sql/: sample.sql
tests/fixtures/typescript/: sample.ts
